SAP Fiori Design Compliance - Complete Quality Control Update
This commit brings all Fiori Elements applications to 100% SAP Fiori
Design Guidelines compliance based on comprehensive quality control review.

## Applications Updated (6 apps - all 100% compliant)
- financial-statements (Analytical List Page)
- revenue-analysis (Analytical List Page)
- working-capital (List Report)
- service-agreements (List Report)
- sales-orders (List Report)
- sales-invoices (List Report)

## Changes Made

### 1. Removed Duplicate Application
- Deleted app/financials/ (duplicate of financial-statements)
- Eliminates confusion and maintains clean codebase architecture

### 2. Enhanced Launchpad Configuration
- Added Sales Invoices tile to Operations group
- Added inbound navigation for salesinvoices-display
- All 6 apps now accessible via Fiori Launchpad tiles

### 3. Manifest Files - Complete SAP Fiori Compliance
Updated manifests for service-agreements, sales-orders, sales-invoices:
- Added sap.ui section with device type support (desktop/tablet/phone)
- Added i18n internationalization configuration
- Added contentDensities (compact/cozy) for responsive design
- Added minUI5Version and complete dependency declarations
- Added flexible column layout configuration
- Updated applicationVersion to 0.3.0
- Added async router configuration for performance
- Added variant management and navigation settings
- Added sap.cloud section for cloud deployment

### 4. Performance Enhancements
- Added async: true to router config in financial-statements
- Added async: true to router config in revenue-analysis
- Added defaultThreeColumnLayoutType to revenue-analysis

### 5. Internationalization Support
Created i18n resource bundles for:
- app/service-agreements/webapp/i18n/i18n.properties
- app/sales-orders/webapp/i18n/i18n.properties
- app/sales-invoices/webapp/i18n/i18n.properties

## Compliance Results
All applications now support:
✅ Multi-device responsiveness (desktop, tablet, mobile)
✅ Intern

--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -97,6 +97,16 @@
                                                 icon: "sap-icon://cart",
                                                 targetURL: "#salesorders-display"
                                             }
+                                        },
+                                        {
+                                            id: "salesInvoices",
+                                            tileType: "sap.ushell.ui.tile.StaticTile",
+                                            properties: {
+                                                title: "Sales Invoices",
+                                                subtitle: "Invoice Management",
+                                                icon: "sap-icon://receipt",
+                                                targetURL: "#salesinvoices-display"
+                                            }
                                         }
                                     ]
                                 }
@@ -176,6 +186,20 @@
                                         applicationType: "SAPUI5",
                                         additionalInformation: "SAPUI5.Component=salesorders",
                                         url: "/sales-orders/webapp"
+                                    }
+                                },
+                                "salesinvoices-display": {
+                                    semanticObject: "salesinvoices",
+                                    action: "display",
+                                    title: "Sales Invoices",
+                                    signature: {
+                                        parameters: {},
+                                        additionalParameters: "allowed"
+                                    },
+                                    resolutionResult: {
+                                        applicationType: "SAPUI5",
+                                        additionalInformation: "SAPUI5.Component=salesinvoices",
+                                        url: "/sales-invoices/webapp"
                                     }
                                 }
                             }
