Add Fulfillment apps - Delivery Notes, Products, and Product Groups
Added three new Fiori Elements applications under a new "Fulfillment"
group in the Fiori Launchpad to manage delivery notes, products, and
product groups.

## New Applications

### 1. Delivery Notes (GUA_DeliveryNote)
- List Report + Object Page for tracking delivery notes
- Fields: delivery note number, order number, customer, delivery date,
  status, address, contact person, total items, carrier
- Icon: sap-icon://shipping-status

### 2. Products (ESL_Product)
- List Report + Object Page for product catalog management
- Fields: product code, name, description, product group, unit price,
  currency, supplier, cost center, status
- Icon: sap-icon://product

### 3. Product Groups (PGA_ProductGroup)
- List Report + Object Page for product group management
- Fields: group code, group name, description, category, manager, status
- Icon: sap-icon://group

## Technical Changes

### Schema & Service
- Added GUA_DeliveryNote entity to db/schema.cds
- Added ESL_Product entity to db/schema.cds
- Added PGA_ProductGroup entity to db/schema.cds
- Added entity projections to srv/analytics-service.cds

### UI Annotations
- Created comprehensive UI annotations for all three entities
- Defined LineItem, HeaderInfo, SelectionFields, Facets, FieldGroups
- Added Identification for each entity

### Fiori Elements Apps (100% SAP Fiori Compliant)
Created three new apps with full Fiori compliance:
- app/delivery-notes/ - Delivery Notes management
- app/products/ - Product catalog
- app/product-groups/ - Product group management

Each app includes:
- manifest.json with complete SAP Fiori configuration
- i18n internationalization support
- Device type support (desktop, tablet, phone)
- Content densities (compact, cozy)
- Flexible column layout
- Async router configuration
- Variant management

### Launchpad Configuration
- Added new "Fulfillment" group with 3 tiles
- Added inbound navigation for all three apps
- Added resour

--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -109,6 +109,45 @@
                                             }
                                         }
                                     ]
+                                },
+                                {
+                                    id: "fulfillment",
+                                    title: "Fulfillment",
+                                    isPreset: true,
+                                    isVisible: true,
+                                    isGroupLocked: false,
+                                    tiles: [
+                                        {
+                                            id: "deliveryNotes",
+                                            tileType: "sap.ushell.ui.tile.StaticTile",
+                                            properties: {
+                                                title: "Delivery Notes",
+                                                subtitle: "Track Deliveries",
+                                                icon: "sap-icon://shipping-status",
+                                                targetURL: "#deliverynotes-display"
+                                            }
+                                        },
+                                        {
+                                            id: "products",
+                                            tileType: "sap.ushell.ui.tile.StaticTile",
+                                            properties: {
+                                                title: "Products",
+                                                subtitle: "Product Catalog",
+                                                icon: "sap-icon://product",
+                                                targetURL: "#products-display"
+                                            }
+                                        },
+                                        {
+                                            id: "productGroups",
+                                            tileType: "sap.ushell.ui.tile.StaticTile",
+                                            properties: {
+                                                title: "Product Groups",
+                                                subtitle: "Product Categories",
+                                                icon: "sap-icon://group",
+                                                targetURL: "#productgroups-display"
+                                            }
+                                        }
+                                    ]
                                 }
                             ]
                         }
@@ -201,6 +240,48 @@
                                         additionalInformation: "SAPUI5.Component=salesinvoices",
                                         url: "/sales-invoices/webapp"
                                     }
+                                },
+                                "deliverynotes-display": {
+                                    semanticObject: "deliverynotes",
+                                    action: "display",
+                                    title: "Delivery Notes",
+                                    signature: {
+                                        parameters: {},
+                                        additionalParameters: "allowed"
+                                    },
+                                    resolutionResult: {
+                                        applicationType: "SAPUI5",
+                                        additionalInformation: "SAPUI5.Component=deliverynotes",
+                                        url: "/delivery-notes/webapp"
+                                    }
+                                },
+                                "products-display": {
+                                    semanticObject: "products",
+                                    action: "display",
+                                    title: "Products",
+                                    signature: {
+                                        parameters: {},
+                                        additionalParameters: "allowed"
+                                    },
+                                    resolutionResult: {
+                                        applicationType: "SAPUI5",
+                                        additionalInformation: "SAPUI5.Component=products",
+                                        url: "/products/webapp"
+                                    }
+                                },
+                                "productgroups-display": {
+                                    semanticObject: "productgroups",
+                                    action: "display",
+                                    title: "Product Groups",
+                                    signature: {
+                                        parameters: {},
+                                        additionalParameters: "allowed"
+                                    },
+                                    resolutionResult: {
+                                        applicationType: "SAPUI5",
+                                        additionalInformation: "SAPUI5.Component=productgroups",
+                                        url: "/product-groups/webapp"
+                                    }
                                 }
                             }
                         }
@@ -230,7 +311,10 @@
             "workingcapital": "/working-capital/webapp",
             "serviceagreements": "/service-agreements/webapp",
             "salesorders": "/sales-orders/webapp",
-            "salesinvoices": "/sales-invoices/webapp"
+            "salesinvoices": "/sales-invoices/webapp",
+            "deliverynotes": "/delivery-notes/webapp",
+            "products": "/products/webapp",
+            "productgroups": "/product-groups/webapp"
         }'
         data-sap-ui-frameOptions="trusted"
         data-sap-ui-bindingSyntax="complex"
