--- a/app/launchpad.html
+++ b/app/launchpad.html
@@ -40,6 +40,16 @@
                                     isGroupLocked: false,
                                     tiles: [
                                         {
+                                            id: "analyticsDashboard",
+                                            tileType: "sap.ushell.ui.tile.StaticTile",
+                                            properties: {
+                                                title: "Analytics Dashboard",
+                                                subtitle: "Comprehensive Financial Analysis",
+                                                icon: "sap-icon://dashboard",
+                                                targetURL: "#analytics-display"
+                                            }
+                                        },
+                                        {
                                             id: "financialStatements",
                                             tileType: "sap.ushell.ui.tile.StaticTile",
                                             properties: {
@@ -157,6 +167,20 @@
                     adapter: {
                         config: {
                             inbounds: {
+                                "analytics-display": {
+                                    semanticObject: "analytics",
+                                    action: "display",
+                                    title: "Analytics Dashboard",
+                                    signature: {
+                                        parameters: {},
+                                        additionalParameters: "allowed"
+                                    },
+                                    resolutionResult: {
+                                        applicationType: "SAPUI5",
+                                        additionalInformation: "SAPUI5.Component=demo.ui5",
+                                        url: "/ui5"
+                                    }
+                                },
                                 "financialstatements-display": {
                                     semanticObject: "financialstatements",
                                     action: "display",
@@ -306,6 +330,7 @@
         data-sap-ui-language="en"
         data-sap-ui-xx-componentPreload="off"
         data-sap-ui-resourceroots='{
+            "demo.ui5": "/ui5",
             "financialstatements": "/financial-statements/webapp",
             "revenueanalysis": "/revenue-analysis/webapp",
             "workingcapital": "/working-capital/webapp",
